--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==23.2.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+asttokens==3.0.0
 asyncer==0.0.7
 bidict==0.23.1
 black==24.10.0
@@ -10,8 +11,10 @@ charset-normalizer==3.4.0
 chevron==0.14.0
 click==8.1.7
 dataclasses-json==0.6.7
+decorator==5.1.1
 Deprecated==1.2.15
 distro==1.9.0
+executing==2.1.0
 fastapi==0.115.5
 filetype==1.2.0
 googleapis-common-protos==1.66.0
@@ -21,10 +24,14 @@ httpcore==1.0.7
 httpx==0.28.0
 idna==3.10
 importlib_metadata==8.5.0
+ipython==8.30.0
+jedi==0.19.2
 jiter==0.8.0
+langsmith==0.2.0
 Lazify==0.4.0
 literalai==0.0.623
 marshmallow==3.23.1
+matplotlib-inline==0.1.7
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 numpy==1.26.4
@@ -38,30 +45,41 @@ opentelemetry-instrumentation==0.49b2
 opentelemetry-proto==1.28.2
 opentelemetry-sdk==1.28.2
 opentelemetry-semantic-conventions==0.49b2
+orjson==3.10.12
 packaging==23.2
+parso==0.8.4
 pathspec==0.12.1
+pexpect==4.9.0
 platformdirs==4.3.6
+prompt_toolkit==3.0.48
 protobuf==5.29.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pydantic==2.10.1
 pydantic_core==2.27.1
+Pygments==2.18.0
 PyJWT==2.10.1
 python-dotenv==1.0.1
 python-engineio==4.10.1
 python-multipart==0.0.9
 python-socketio==5.11.4
 requests==2.32.3
+requests-toolbelt==1.0.0
 simple-websocket==1.1.0
 sniffio==1.3.1
+stack-data==0.6.3
 starlette==0.41.3
 syncer==2.0.3
 tomli==2.2.1
 tqdm==4.67.1
+traitlets==5.14.3
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 uptrace==1.28.2
 urllib3==2.2.3
 uvicorn==0.25.0
 watchfiles==0.20.0
+wcwidth==0.2.13
 wrapt==1.17.0
 wsproto==1.2.0
 zipp==3.21.0
