--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 aiofiles==23.2.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.9
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
 asttokens==3.0.0
 asyncer==0.0.7
+attrs==24.2.0
 bidict==0.23.1
 black==24.10.0
 certifi==2024.8.30
@@ -17,6 +21,7 @@ distro==1.9.0
 executing==2.1.0
 fastapi==0.115.5
 filetype==1.2.0
+frozenlist==1.5.0
 googleapis-common-protos==1.66.0
 grpcio==1.68.1
 h11==0.14.0
@@ -24,18 +29,26 @@ httpcore==1.0.7
 httpx==0.28.0
 idna==3.10
 importlib_metadata==8.5.0
+ipdb==0.13.13
 ipython==8.30.0
 jedi==0.19.2
 jiter==0.8.0
-langsmith==0.2.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.10
+langchain-core==0.3.22
+langchain-openai==0.2.11
+langchain-text-splitters==0.3.2
+langsmith==0.1.147
 Lazify==0.4.0
 literalai==0.0.623
 marshmallow==3.23.1
 matplotlib-inline==0.1.7
+multidict==6.1.0
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 numpy==1.26.4
-openai==1.56.1
+openai==1.57.0
 opentelemetry-api==1.28.2
 opentelemetry-exporter-otlp==1.28.2
 opentelemetry-exporter-otlp-proto-common==1.28.2
@@ -52,6 +65,7 @@ pathspec==0.12.1
 pexpect==4.9.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.48
+propcache==0.2.1
 protobuf==5.29.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -63,13 +77,18 @@ python-dotenv==1.0.1
 python-engineio==4.10.1
 python-multipart==0.0.9
 python-socketio==5.11.4
+PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 simple-websocket==1.1.0
 sniffio==1.3.1
+SQLAlchemy==2.0.36
 stack-data==0.6.3
 starlette==0.41.3
 syncer==2.0.3
+tenacity==9.0.0
+tiktoken==0.8.0
 tomli==2.2.1
 tqdm==4.67.1
 traitlets==5.14.3
@@ -82,4 +101,5 @@ watchfiles==0.20.0
 wcwidth==0.2.13
 wrapt==1.17.0
 wsproto==1.2.0
+yarl==1.18.3
 zipp==3.21.0
